[package]
authors = ["QingGo <zyqingjohn@qq.com>"]
description = "A key-value store"
edition = "2021"
name = "kvs"
version = "0.1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[lib]
doctest = false
test = false

[[bin]]
doctest = false
name = "kvs"
test = false

[features]

[dependencies]
anyhow = "1.0"
bson = "2.0"
clap = "3.0.0-beta.5"
rand = "0.8.4"
ron = "0.7.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
