[package]
authors = ["QingGo <zyqingjohn@qq.com>"]
description = "A key-value store"
edition = "2021"
name = "kvs"
version = "0.1.0"

[lib]
doctest = false
test = false

[[bin]]
doctest = false
name = "kvs"
test = false

[features]

[dependencies]
anyhow = "1.0"
bson = "2.0"
clap = "3.0.0-beta.5"
lazy_static = "1.4.0"
rand = {version = "0.8.4", features = ["small_rng"]}
ron = "0.7.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sled = "0.34.7"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.8.0"
thiserror = "1.0.30"
rayon = "1.5.1"
crossbeam-channel = "0.5.1"

[dev-dependencies]
assert_cmd = "0.11"
criterion = {version = "0.3", features = ["html_reports"]}
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[[bench]]
name = "benchmark"
harness = false
